--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "gatsby-starter-dimension-v2",
-  "description": "Gatsby Starter - Dimension V2",
+  "name": "tbhr",
+  "description": "An arduous hill race in the Scottish Borders",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "John Hamer",
   "dependencies": {
-    "gatsby": "^2.15.28",
-    "gatsby-plugin-manifest": "^2.2.20",
-    "gatsby-plugin-offline": "^3.0.11",
-    "gatsby-plugin-react-helmet": "^3.1.10",
-    "gatsby-plugin-sass": "^2.1.17",
-    "node-sass": "^4.12.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.19.5",
+    "gatsby-background-image": "^0.10.2",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-manifest": "^2.2.42",
+    "gatsby-plugin-offline": "^3.0.35",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.3.9",
+    "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-source-filesystem": "^2.1.42",
+    "gatsby-transformer-csv": "^2.1.21",
+    "gatsby-transformer-sharp": "^2.3.9",
+    "match-sorter": "^4.0.2",
+    "node-sass": "^4.13.1",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-select": "^2.0.0-beta.7",
+    "react-table": "^7.0.0-rc.16",
+    "styled-components": "^5.0.1"
+  },
+  "resolutions": {
+    "graphql": "^14.5.8",
+    "**/graphql": "^14.5.8"
   },
   "keywords": [
     "gatsby"
